--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -694,6 +694,7 @@ footer .social-medias{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    gap: 20%;
 }
 
 footer .social-medias img{
